--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 def AAVersion = '4.3.1'
+def supportLibVersion = '25.1.1'
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -42,13 +43,19 @@ dependencies {
     implementation "org.androidannotations:androidannotations-api:$AAVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
+    //the core iconcis library (without any widgets)
+    implementation "com.mikepenz:iconics-core:3.0.0@aar"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
+
     compile "io.realm:realm-android-library:$project.realmVersion"
 
     compile 'io.realm:android-adapters:2.1.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
