make adding sample data work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 def AAVersion = '4.3.1'
-def supportLibVersion = '25.1.1'
+def supportLibVersion = '25.4.0'
 def anko_version = '0.10.2'
 
 apply plugin: 'com.android.application'
@@ -60,9 +60,11 @@ dependencies {
     implementation "com.android.support:cardview-v7:${supportLibVersion}"
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
     compile "org.jetbrains.anko:anko-coroutines:$anko_version"
+
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
 }
 repositories {
     mavenCentral()
+    google()
 }
