--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ allOpen {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -68,3 +69,5 @@ repositories {
     mavenCentral()
     google()
 }
+
+apply plugin: 'kotlin-android-extensions'
