--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     compile 'com.synnapps:carouselview:0.1.4'
     compile "com.android.support:gridlayout-v7:${supportLibVersion}"
     compile group: "commons-io", name: "commons-io", version: "2.6"
+
+    compile 'agency.tango.android:avatar-view:0.0.2'
 }
 repositories {
     mavenCentral()
