login/signup screen and minor UI corrections

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tradeapp.ateneo.edu.tradeapp">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:name=".TradeApp_"
         android:allowBackup="true"
@@ -20,7 +25,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ProductListActivity_" />
-        <activity android:name=".ProductDetailsActivity_"></activity>
+        <activity android:name=".ProductDetailsActivity_" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
