login/register screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".ProductListActivity_" />
         <activity android:name=".ProductDetailsActivity_" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginActivity_"
             android:label="@string/title_activity_login"></activity>
     </application>
 
