add product activity launches from bottom navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".LoginActivity_"
             android:label="@string/title_activity_login" />
-        <activity android:name=".AccountDetailsActivity_"></activity>
+        <activity android:name=".AccountDetailsActivity_" />
+        <activity android:name=".AddProductActivity_"></activity>
     </application>
 
 </manifest>
