--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,7 +31,8 @@
         <activity android:name=".AccountDetailsActivity_" />
         <activity android:name=".AddProductActivity_" />
         <activity android:name=".MessageActivity_"></activity>
-        <activity android:name=".AccountFeedbackActivity_"></activity>
+        <activity android:name=".AccountFeedbackActivity_"
+            android:windowSoftInputMode="adjustPan"></activity>
     </application>
 
 </manifest>
